--- a/.github/workflows/testing-65.yml
+++ b/.github/workflows/testing-65.yml
@@ -5,6 +5,8 @@ jobs:
   test-lint-build:
     runs-on: ubuntu-latest
     steps:
-      - name: using_other_action
-        uses: Mahmoud-64/git-actions/.github/workflows/testing.yml
+      - name: print
+        run: echo "${{ "hello" }}"
+#       - name: using_other_action
+#         uses: Mahmoud-64/git-actions/.github/workflows/testing.yml
       
