--- a/.github/workflows/testing-65.yml
+++ b/.github/workflows/testing-65.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print
-        run: echo "${{ "hello" }}"
+        run: echo "hello"
 #       - name: using_other_action
 #         uses: Mahmoud-64/git-actions/.github/workflows/testing.yml
       
