--- a/.github/workflows/testing-65.yml
+++ b/.github/workflows/testing-65.yml
@@ -8,5 +8,5 @@ jobs:
       - name: print
         run: echo "hello"
       - name: using_other_action
-        uses: Mahmoud-64/git-actions/.github/workflows/testing.yml@main
+        uses: Mahmoud-64/git-actions/.github/workflows/issue.yml@main
       
