--- a/.github/workflows/testing-65.yml
+++ b/.github/workflows/testing-65.yml
@@ -5,7 +5,7 @@ jobs:
   test-lint-build:
     runs-on: ubuntu-latest
     steps:
-      - name: print
+      - name: printt
         run: echo "hello"
       - name: using_other_action
         uses: Mahmoud-64/git-actions/.github/workflows/issue.yml@main
