--- a/.github/workflows/testing-65.yml
+++ b/.github/workflows/testing-65.yml
@@ -3,6 +3,6 @@ name: testing
 on: [push, workflow_dispatch]
 jobs:
   test-lint-build:
-    uses: Mahmoud-64/git-actions/.github/workflows/issue.yml@main      
+    uses: Mahmoud-64/git-actions/.github/workflows/test.yml@main      
 
       
